[package]
name = "cryptopals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# libmath = "*"
base64 = "*"
hex = "*"
itertools = "*"
aes = "*"
# nalgebra = "*"
# log = { version = "0.4", features = [] }
rand = "*"
